--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
 		"gulp-w3c-html-validator": "^5.1.4",
 		"postcss": "^8.4.19",
 		"postcss-csso": "^6.0.1",
-		"postcss-scss": "^4.0.5",
+		"postcss-scss": "^4.0.6",
 		"postcss-url": "^10.1.3",
 		"pre-commit": "^1.2.2",
-		"sass": "^1.56.1",
-		"stylelint": "^14.15.0"
+		"sass": "^1.56.2",
+		"stylelint": "^14.16.0",
+		"stylelint-config-firefoxic": "^1.0.0"
 	},
 	"scripts": {
 		"editorconfig": "editorconfig-cli",
@@ -36,7 +37,8 @@
 		"lint": "npm run editorconfig && npm run stylelint && npm run w3c && npm run bemlint",
 		"build": "gulp build",
 		"start": "gulp runDev",
-		"preview": "gulp build; gulp startServer"
+		"preview": "gulp build; gulp startServer",
+		"test": "npm run lint"
 	},
 	"browserslist": [
 		"last 2 versions",
