--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
 	"name": "cat-energy-27",
-	"private": true,
 	"description": "Личный проект «Кэт энерджи» от HTML Academy",
-	"devDependencies": {
-		"@htmlacademy/editorconfig-cli": "^1.0.0",
-		"autoprefixer": "^10.4.13",
-		"browser-sync": "^2.27.10",
-		"del": "^7.0.0",
-		"gulp": "^4.0.2",
-		"gulp-html-bemlinter": "^2.1.2",
-		"gulp-htmlmin": "^5.0.1",
-		"gulp-if": "^3.0.0",
-		"gulp-libsquoosh": "^1.0.12",
-		"gulp-plumber": "^1.2.1",
-		"gulp-postcss": "^9.0.1",
-		"gulp-sass": "^5.1.0",
-		"gulp-stacksvg": "^2.0.0",
-		"gulp-svgmin": "^4.1.0",
-		"gulp-terser": "^2.1.0",
-		"gulp-twig": "^1.2.0",
-		"gulp-w3c-html-validator": "^5.1.4",
-		"postcss": "^8.4.20",
-		"postcss-csso": "^6.0.1",
-		"postcss-scss": "^4.0.6",
-		"postcss-url": "^10.1.3",
-		"pre-commit": "^1.2.2",
-		"sass": "^1.57.1",
-		"stylelint": "^14.16.0"
-	},
+	"private": true,
+	"type": "module",
 	"scripts": {
-		"editorconfig": "editorconfig-cli",
+		"editorconfig": "editorconfig-checker",
 		"stylelint": "stylelint \"source/sass/**/*.scss\"",
 		"w3c": "gulp processMarkup validateMarkup --series --silent",
 		"bemlint": "gulp processMarkup lintBem --series --silent",
 		"lint": "npm run editorconfig && npm run stylelint && npm run w3c && npm run bemlint",
-		"build": "gulp build",
 		"start": "gulp runDev",
-		"preview": "gulp build; gulp startServer",
-		"test": "npm run lint"
+		"build": "gulp buildProd",
+		"preview": "gulp buildProd startServer --series"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.14",
+		"browser-sync": "^2.29.1",
+		"del": "^7.0.0",
+		"editorconfig-checker": "^5.0.1",
+		"gulp": "^4.0.2",
+		"gulp-html-bemlinter": "^2.1.3",
+		"gulp-htmlmin": "^5.0.1",
+		"gulp-if": "^3.0.0",
+		"gulp-libsquoosh": "~1.0.12",
+		"gulp-plumber": "^1.2.1",
+		"gulp-postcss": "^9.0.1",
+		"gulp-sass": "^5.1.0",
+		"gulp-stacksvg": "^2.0.1",
+		"gulp-svgmin": "^4.1.0",
+		"gulp-terser": "^2.1.0",
+		"gulp-twig": "^1.2.0",
+		"gulp-w3c-html-validator": "^5.2.0",
+		"postcss": "^8.4.23",
+		"postcss-csso": "^6.0.1",
+		"postcss-scss": "^4.0.6",
+		"postcss-url": "^10.1.3",
+		"pre-commit": "^1.2.2",
+		"sass": "^1.62.1",
+		"stylelint": "^15.6.0",
+		"stylelint-config-firefoxic": "^1.2.1"
 	},
 	"browserslist": [
 		"last 2 versions",
@@ -45,18 +46,14 @@
 		"not op_mini all",
 		"not < 0.2%"
 	],
-	"editorconfig-cli": [
-		"*.json",
-		"*.js",
-		"source/**/*.html",
-		"source/**/*.twig",
-		"source/**/*.js",
-		"source/**/*.svg",
-		"source/sass/**/*.scss"
-	],
+	"pre-commit": {
+		"run": "lint",
+		"silent": true
+	},
 	"engines": {
 		"node": "16.x"
 	},
-	"type": "module",
-	"pre-commit": "lint"
+	"volta": {
+		"node": "16.20.0"
+	}
 }
